<resources>
    <string name="app_name">Demo Simple Click</string>
    <string name="button_name">DISPLAY</string>
    <string name="hint">Enter Something</string>
    <string name="show">Display what user enters</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="btnMale">Male</string>
    <string name="btnFemale">Female</string>
</resources>